--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -9,6 +9,7 @@
 
     section#login {
         width: 80vh;
+        height: 300px;
     }
 
     section#login > div#imagem {
@@ -32,6 +33,7 @@
 
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -53,4 +55,5 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 1.2em;
+    margin: 20px 0px;
 }
